con fallos pero entregado

--- a/recursos/pedidos-main/Pedidos/src/main/resources/templates/categorias/lista.html
+++ b/recursos/pedidos-main/Pedidos/src/main/resources/templates/categorias/lista.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container mt-4">
         <h1>Categorias</h1>
-        <a href="/clientes/nuevo" class="btn btn-primary mb-3">Agregar Categoria</a>
+        <a href="/categorias/nuevo" class="btn btn-primary mb-3">Agregar Categoria</a>
 		<a href="/productos" class="btn btn-primary mb-3">Ver Productos</a>
 
         <table class="table table-striped">
