--- a/recursos/pedidos-main/Pedidos/src/main/resources/templates/layout/navbar.html
+++ b/recursos/pedidos-main/Pedidos/src/main/resources/templates/layout/navbar.html
@@ -16,6 +16,9 @@
                    <li class="nav-item">
                        <a class="nav-link" href="/productos">Productos</a>
                    </li>
+				   <li class="nav-item">
+                      <a class="nav-link" href="/categorias">Categorías</a>
+                  </li>
                </ul>
            </div>
        </div>
