--- a/recursos/pedidos-main/Pedidos/src/main/resources/templates/public/home.html
+++ b/recursos/pedidos-main/Pedidos/src/main/resources/templates/public/home.html
@@ -53,6 +53,16 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="col-md-4">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Categorías</h5>
+						<p class="card-text">Administracion de categorías.</p>
+						<a th:href="@{/categorias}" class="btn btn-danger">Ver Categorías</a>
+					</div>
+				</div>
+			</div>
 	
 		</div>
 		<!-- Footer -->
